# Swarm-Prime-Directive

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bootstrap.sh  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
infra/: cloudformation.yml
swarm_prime/: __init__.py  cli.py  config.py  constraints.py  metacognition.py  models.py  orchestrator.py  peer_review.py
swarm_prime/agents/: __init__.py  alignment_guardian.py  architect.py  evaluator.py  experiment_designer.py  memory_curator.py  skeptic.py
swarm_prime/providers/: __init__.py  anthropic.py
tests/: test_metacognition.py  test_orchestrator_paths.py  test_peer_review_flows.py  test_swarm.py
